--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html lang ="en-us">
+
+<head>
+	<meta charset="UTF-8">
+    <head>
+	<title>Phil's New Page</title>
+
+<body>
+	<h1>My name is Phil and I am a principal business intelligence analyst at Digicert. </h1>
+	<img src="IMG_3971.jpg">
+    <br>
+    <strong><a href="https://www.linkedin.com/in/phillip-sohn-92a09133/">LinkedIn Page</a></strong><br>
+
+	</body>
+	</html>
