--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>My name is Phil and I am a principal business intelligence analyst at Digicert. </h1>
-	<img src="IMG_3971.jpg">
+	<img src="https://assets.entrepreneur.com/content/3x2/2000/20180703190744-rollsafe-meme.jpeg?width=700&crop=2:1">
     <br>
     <strong><a href="https://www.linkedin.com/in/phillip-sohn-92a09133/">LinkedIn Page</a></strong><br>
 
